change paths for gh-pages

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://melvinwallerjr.github.io/react-app",
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -14,6 +15,7 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "concurrently": "^7.0.0",
+    "gh-pages": "^3.2.3",
     "node-sass": "^7.0.1",
     "nodemon": "^2.0.15",
     "sass": "^1.49.9"
@@ -23,6 +25,8 @@
     "build": "npm run build-css && react-scripts build",
     "build-css": "node-sass --include-path scss src/styles/index.scss build/styles.css",
     "watch-css": "nodemon -e scss -x \"npm run build-css\"",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
