--- a/package.json
+++ b/package.json
@@ -15,6 +15,13 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "concurrently": "^7.0.0",
+    "eslint": "^8.2.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-testing-library": "^5.2.0",
     "gh-pages": "^3.2.3",
     "node-sass": "^7.0.1",
     "nodemon": "^2.0.15",
@@ -29,6 +36,7 @@
     "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "coverage": "react-scripts test --coverage",
+    "lint": "eslint ./src/**/*[jt]s?(x)",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -63,6 +71,8 @@
         "statements": 90
       }
     },
-    "coverageReporters": ["text"]
+    "coverageReporters": [
+      "text"
+    ]
   }
 }
